// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:rr:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rr: headlessui-listbox-button-:rs:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rs:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Multi Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:rv:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rv: headlessui-listbox-button-:r10:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:r10:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:rp:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rp: headlessui-listbox-button-:rq:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:rq:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select With Meta Data 1`] = `
<div
  className="space-y-2"
>
  <label
    className="mr-2 inline uppercase capitalize text-16-bold"
    data-headlessui-state=""
    data-testid="txt"
    id="headlessui-listbox-label-:r11:"
    onClick={[Function]}
  >
    Select Polygon 
  </label>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r11: headlessui-listbox-button-:r12:"
    className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
    data-headlessui-state=""
    disabled={false}
    id="headlessui-listbox-button-:r12:"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <div
      className="flex items-center gap-2"
    >
      <div
        className="min-h-[8px] min-w-[8px] rounded-full "
      />
      <p
        className="w-full line-clamp-1 text-14-light"
        data-testid="txt"
      >
        Aerobic Agroforestry
      </p>
    </div>
    <div
      style={
        Object {
          "height": undefined,
          "width": 16,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Dropdown Single Select With Other Option 1`] = `
<div
  className="relative"
>
  <div
    className="space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-headlessui-state=""
      data-testid="txt"
      id="headlessui-listbox-label-:rt:"
      onClick={[Function]}
    >
      Drop down label 
    </label>
    <p
      className="text-body-400 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Drop down description",
        }
      }
      data-testid="txt"
    />
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="headlessui-listbox-label-:rt: headlessui-listbox-button-:ru:"
      className="flex h-10 items-center justify-between gap-3 rounded-lg py-2 px-3 hover:cursor-pointer border-light"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:ru:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="flex items-center gap-2"
      >
        <p
          className="w-full line-clamp-1 text-14-light"
          data-testid="txt"
        >
          placeholder
        </p>
      </div>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </div>
</div>
`;
